Clean up netfix

--- a/netfix movies(Solr).ipynb
+++ b/netfix movies(Solr).ipynb
@@ -170,8 +170,8 @@
     "rankLibResult, ndcgPerFeature = feature_search(client,\n",
     "                                               trainingInFile='data/title_judgments_train.txt',\n",
     "                                               metric2t='NDCG@10',\n",
-    "                                               leafs=20,\n",
-    "                                               trees=20,\n",
+    "                                               leafs=10,\n",
+    "                                               trees=10,\n",
     "                                               kcv=15,\n",
     "                                               features=[1,2,3,4,5,6,7],\n",
     "                                               featureSet='title')\n",
@@ -202,10 +202,10 @@
     "\n",
     "```\n",
     "Impact of each feature on the model\n",
-    "3 - 17728.651362443747\n",
-    "4 - 10986.88505569509\n",
-    "7 - 7504.573843344015\n",
-    "1 - 1580.321225819952\n",
+    "6 - 7558.03067043681\n",
+    "7 - 7423.682997121572\n",
+    "3 - 4153.9583472139475\n",
+    "1 - 1416.4304774088519\n",
     "```\n",
     "\n",
     "to one trained with the full model. Notice how features have different impacts. This is due to feature dependency"
@@ -257,8 +257,8 @@
     "rankLibResult, ndcgPerFeature = feature_search(client,\n",
     "                                               trainingInFile='data/title_judgments_train.txt',\n",
     "                                               metric2t='NDCG@10',\n",
-    "                                               leafs=20,\n",
-    "                                               trees=20,\n",
+    "                                               leafs=10,\n",
+    "                                               trees=10,\n",
     "                                               kcv=15,\n",
     "                                               featureCost=0.1,# 1.0-cost ^ num_features\n",
     "                                               features=[1,2,3,4,5,6,7],\n",
@@ -301,7 +301,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from ltr.client import ElasticClient\n",
     "from ltr.MART_model import eval_model\n",
     "from ltr.judgments import judgments_from_file, judgments_by_qid\n",
     "\n",
@@ -462,6 +461,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Now reindex with collection name...\n",
+    "\n",
     "We'll add collection name, and reindex."
    ]
   },
@@ -501,7 +502,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Add it to the features, and retrain...."
+    "## Add it to the features, and retrain...."
    ]
   },
   {
@@ -574,7 +575,7 @@
     "        \"q\" : \"{!func}def(release_year,2000)\"\n",
     "      }\n",
     "    },\n",
-    "    #8\n",
+    "    #8 Collection Name BM25 Score\n",
     "    {\n",
     "      \"name\" : \"coll_name_bm25\",\n",
     "      \"store\": \"title2\",\n",
@@ -583,7 +584,7 @@
     "        \"q\" : \"collection_name_en:(${keywords})\"\n",
     "      }\n",
     "    },\n",
-    "    #9\n",
+    "    #9 Collection Name Phrase BM25 Score\n",
     "    {\n",
     "      \"name\" : \"coll_name_phrase_bm25\",\n",
     "      \"store\": \"title2\",\n",
@@ -609,6 +610,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now a feature search\n",
+    "\n",
+    "And do a feature search over these new features (go get some coffee).\n",
+    "\n",
+    "We also up the number of trees & leafs to see if it has an impact"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -621,7 +633,7 @@
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
     "                                               kcv=15,\n",
-    "                                               features=[1,2,3,4,5,6,7,8],\n",
+    "                                               features=[1,2,3,4,5,6,7,8,9],\n",
     "                                               featureSet='title2')\n",
     "\n",
     "print()\n",
@@ -641,6 +653,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Review new feature impacts\n",
+    "\n",
+    "Impact of each feature on the model... this is the best mix. Feature 8 helps, but not feature 9 as much. Interesting\n",
+    "\n",
+    "```\n",
+    "4 - 18032.527656827504\n",
+    "3 - 9801.409052757816\n",
+    "5 - 8051.741259194476\n",
+    "7 - 5711.964176322393\n",
+    "8 - 3798.6132329430748\n",
+    "1 - 1439.2180228991883\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Now save away this model"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -650,8 +687,8 @@
     "trainLog  = train(client,\n",
     "                  trainingInFile='data/title2_judgments_train.txt',\n",
     "                  metric2t='NDCG@10',\n",
-    "                  leafs=20,\n",
-    "                  trees=20,\n",
+    "                  leafs=10,\n",
+    "                  trees=10,\n",
     "                  features=[1,3,4,5,7,8],\n",
     "                  featureSet='title2',\n",
     "                  modelName='title2')\n",
@@ -674,7 +711,14 @@
    "outputs": [],
    "source": [
     "from ltr import search\n",
-    "search(client, \"cartoon with basketball aliens\", modelName='title2')"
+    "search(client, \"star wars\", modelName='title2')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Examine Model 2"
    ]
   },
   {
@@ -683,182 +727,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "config = {\"validation\": {\n",
-    "              \"index\": \"tmdb\",\n",
-    "              \"params\": {\n",
-    "                  \"keywords\": \"rambo\"\n",
-    "              }\n",
-    "    \n",
-    "           },\n",
-    "           \"featureset\": {\n",
-    "            \"features\": [\n",
-    "            {\n",
-    "                \"name\": \"title_phrase\",\n",
-    "                \"params\": [\"keywords\"],\n",
-    "                \"template\": {\n",
-    "                    \"constant_score\": {\n",
-    "                        \"filter\": {\n",
-    "                            \"match_phrase\": {\"title\": \"{{keywords}}\"}\n",
-    "                        },\n",
-    "                        \"boost\": 1.0\n",
-    "                    }  \n",
-    "                }\n",
-    "            },\n",
-    " \n",
-    "            {\n",
-    "                \"name\": \"overview_bm25\",\n",
-    "                \"params\": [\"keywords\"],\n",
-    "                \"template\": {\n",
-    "                    \"match\": {\"overview\": \"{{keywords}}\"}\n",
-    "                }\n",
-    "            },\n",
-    "   \n",
-    "            {\n",
-    "                \"name\": \"title_fuzzy\",\n",
-    "                \"params\": [\"keywords\"],\n",
-    "                \"template\": {\n",
-    "                    \"match\": {\"title\": \n",
-    "                                {\"query\": \"{{keywords}}\",\n",
-    "                                 \"fuzziness\": \"AUTO\"}}\n",
-    "                }\n",
-    "            },\n",
-    "             {\n",
-    "                \"name\": \"release_year\",\n",
-    "                \"params\": [],\n",
-    "                \"template\": {\n",
-    "                    \"function_score\": {\n",
-    "                        \"field_value_factor\": {\n",
-    "                            \"field\": \"release_year\",\n",
-    "                            \"missing\": 2000\n",
-    "                        },\n",
-    "                        \"query\": { \"match_all\": {} }\n",
-    "                    }\n",
-    "                }\n",
-    "            },\n",
-    "            {\n",
-    "                \"name\": \"coll_name_bm25\",\n",
-    "                \"params\": [\"keywords\"],\n",
-    "                \"template\": {\n",
-    "                    \"match\": {\"collection_name\": \n",
-    "                                {\"query\": \"{{keywords}}\"}}\n",
-    "                }\n",
-    "            },\n",
-    "            {\n",
-    "                \"name\": \"title_fuzzy_2\",\n",
-    "                \"params\": [\"keywords\"],\n",
-    "                \"template\": {\n",
-    "                       \"match\": {\"title.as_str\": \n",
-    "                                {\"query\": \"{{keywords}}\",\n",
-    "                                 \"fuzziness\": \"AUTO\"}}\n",
-    "                }\n",
-    "            }\n",
-    "            ]\n",
-    "    }}\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "from ltr import setup\n",
-    "setup(client, config=config, featureset='title2')\n",
-    "\n",
-    "from ltr.log import judgments_to_training_set\n",
-    "trainingSet = judgments_to_training_set(client, \n",
-    "                                        judgmentInFile='data/title_judgments.txt', \n",
-    "                                        trainingOutFile='data/title2_judgments_train.txt', \n",
-    "                                        featureSet='title2')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "client.get_doc(doc_id=1892)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ltr.train import feature_search\n",
-    "rankLibResult, ndcgPerFeature = feature_search(client,\n",
-    "                                               trainingInFile='data/title2_judgments_train.txt',\n",
-    "                                               metric2t='NDCG@10',\n",
-    "                                               leafs=20,\n",
-    "                                               trees=20,\n",
-    "                                               kcv=15,\n",
-    "                                               features=[1,2,3,4,5],\n",
-    "                                               featureSet='title2')\n",
-    "\n",
-    "print()\n",
-    "print(\"Impact of each feature on the model\")\n",
-    "trainLogs = rankLibResult.trainingLogs\n",
-    "for ftrId, impact in trainLogs[-1].impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
-    "    \n",
-    "for roundDcg in trainLogs[-1].rounds:\n",
-    "    print(roundDcg)\n",
-    "    \n",
-    "print(\"Avg NDCG@10 when feature included:\")\n",
-    "for ftrId, ndcg in ndcgPerFeature.items():\n",
-    "    print(\"%s => %s\" % (ftrId, ndcg))\n",
-    "    \n",
-    "print(\"Avg K-Fold NDCG@10 %s\" % rankLibResult.kcvTestAvg)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ltr import train\n",
-    "trainLog  = train(client,\n",
-    "                  trainingInFile='data/title2_judgments_train.txt',\n",
-    "                  metric2t='NDCG@10',\n",
-    "                  leafs=20,\n",
-    "                  trees=20,\n",
-    "                  featureSet='title2',\n",
-    "                  modelName='title2')\n",
-    "\n",
-    "print()\n",
-    "print(\"Impact of each feature on the model\")\n",
-    "for ftrId, impact in trainLog.impacts.items():\n",
-    "    print(\"{} - {}\".format(ftrId, impact))\n",
-    "    \n",
-    "for roundDcg in trainLog.rounds:\n",
-    "    print(roundDcg)\n",
-    "    \n",
-    "print(\"Train NDCG@10 %s\" % trainLog.rounds[-1])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from ltr.client import ElasticClient\n",
     "from ltr.MART_model import eval_model\n",
     "from ltr.judgments import judgments_from_file, judgments_by_qid\n",
     "\n",
     "features, _ = client.feature_set(index='tmdb', name='title2')\n",
     "\n",
-    "judgmentDict = judgments_by_qid(judgments_from_file(filename='data/title_judgments_train.txt'))\n",
+    "judgmentDict = judgments_by_qid(judgments_from_file(filename='data/title2_judgments_train.txt'))\n",
     "\n",
-    "for qid, judgments in judgmentDict.items():\n",
     "\n",
-    "    model = eval_model(modelName='title2',\n",
-    "                           features=features,\n",
-    "                           judgments=judgments)\n",
+    "rambo=judgmentDict[1]\n",
+    "model = eval_model(modelName='title2',\n",
+    "                       features=features,\n",
+    "                       judgments=rambo)\n",
     "\n",
-    "    print()\n",
-    "    print(\"## Evaluating graded docs for search keywords '%s'\" % judgments[0].keywords)\n",
-    "    print()\n",
-    "    print(model)"
+    "print()\n",
+    "print(\"## Evaluating graded docs for search keywords '%s'\" % rambo[0].keywords)\n",
+    "print()\n",
+    "print(model)"
    ]
   },
   {
@@ -867,15 +752,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.get_doc(doc_id=860)"
+    "whoopsies = model.whoopsies()\n",
+    "for qid, whoopsie in whoopsies.items():\n",
+    "    print(\"== QID %s ==\" % qid)\n",
+    "    print(\"%s - %s\" % (whoopsie.count, whoopsie.totalMagnitude))\n",
+    "    print(whoopsie.perTreeReport())"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "```\n",
+    "== QID 1 ==\n",
+    "10 - 40\n",
+    "tree:0=>0(319074)-4(1368);tree:1=>0(319074)-4(1368);tree:2=>0(319074)-4(1368);tree:3=>0(319074)-4(1368);tree:4=>0(319074)-4(1368);tree:5=>0(319074)-4(1368);tree:6=>0(319074)-4(1368);tree:7=>0(319074)-4(1368);tree:8=>0(319074)-4(1368);tree:9=>0(319074)-4(1368)\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
