Training data formatting added

--- a/raw-solr-commands.ipynb
+++ b/raw-solr-commands.ipynb
@@ -51,6 +51,7 @@
     "        \"q\" : \"overview:(${keywords})\"\n",
     "      }\n",
     "    }\n",
+    "   \n",
     "]\n",
     "\n",
     "requests.put('http://localhost:8983/solr/tmdb/schema/feature-store', \n",
@@ -74,7 +75,7 @@
    "outputs": [],
    "source": [
     "params = {\n",
-    "    \"fl\": \"id,title,[features store=test efi.keywords=\\\"rambo\\\"]\",\n",
+    "    \"fl\": \"id,title,[features store=test efi.equivs=\\\"first blood\\\" efi.keywords=\\\"rambo\\\"]\",\n",
     "    'q': \"id:7555 OR id:1370 id:1369 OR id:1368\",\n",
     "    'rows': 10,\n",
     "    'wt': 'json'  \n",
@@ -82,6 +83,25 @@
     "\n",
     "resp = requests.post('http://localhost:8983/solr/tmdb/select', data=params).json()\n",
     "resp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "4    qid:1   1:10.357876     2:11.95039    3:0.0   4:2019\n",
+    "4    qid:1   1:12.357876     2:11.95039    3:0.0\n",
+    "4    qid:1   1:7.010513     2:11.95039    3:0.0\n",
+    "3    qid:1   ...\n",
+    "...\n",
+    "\n",
+    "\n",
+    "...\n",
+    "4    qid:2\n",
+    "\n",
+    "\n",
+    "```"
    ]
   },
   {
