Remove tmdb in clients to make more generic

--- a/gonna need a bigger bot (Solr).ipynb
+++ b/gonna need a bigger bot (Solr).ipynb
@@ -98,7 +98,7 @@
     "\n",
     "\n",
     "from ltr import setup\n",
-    "setup(client, config=config, featureset='genome')"
+    "setup(client, config=config, index='tmdb', featureset='genome')"
    ]
   },
   {
@@ -147,6 +147,7 @@
     "                 trainingInFile='data/genome_judgments_train.txt',\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genome',\n",
+    "                 index='tmdb',\n",
     "                 modelName='genome')"
    ]
   },
@@ -215,7 +216,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
