--- a/hello-ltr (ES).ipynb
+++ b/hello-ltr (ES).ipynb
@@ -114,7 +114,7 @@
     "\n",
     "\n",
     "from ltr import setup\n",
-    "setup(client, config=config, featureset='release')"
+    "setup(client, config=config, index='tmdb', featureset='release')"
    ]
   },
   {
@@ -157,8 +157,10 @@
    "outputs": [],
    "source": [
     "from ltr import train\n",
-    "train(client, trainingInFile='data/latest-training.txt', featureSet='release', modelName='latest')\n",
-    "train(client, trainingInFile='data/classic-training.txt', featureSet='release', modelName='classic')"
+    "train(client, trainingInFile='data/latest-training.txt', \n",
+    "      index='tmdb', featureSet='release', modelName='latest')\n",
+    "train(client, trainingInFile='data/classic-training.txt', \n",
+    "      index='tmdb', featureSet='release', modelName='classic')"
    ]
   },
   {
