--- a/netfix movies(Solr).ipynb
+++ b/netfix movies(Solr).ipynb
@@ -33,8 +33,15 @@
    "outputs": [],
    "source": [
     "from ltr import download\n",
-    "download();\n",
-    "\n",
+    "download();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from ltr.index import rebuild_tmdb\n",
     "rebuild_tmdb(client)"
    ]
@@ -126,7 +133,7 @@
     "\n",
     "\n",
     "from ltr import setup\n",
-    "setup(client, config=config, featureset='title')"
+    "setup(client, config=config, index='tmdb', featureset='title')"
    ]
   },
   {
@@ -226,6 +233,7 @@
     "                  trees=20,\n",
     "                  features=[1,2,3,4,5,6,7],\n",
     "                  featureSet='title',\n",
+    "                  index='tmdb',\n",
     "                  modelName='title')\n",
     "\n",
     "print()\n",
@@ -614,7 +622,7 @@
     "\n",
     "\n",
     "from ltr import setup\n",
-    "setup(client, config=config, featureset='title2')\n",
+    "setup(client, config=config, index='tmdb', featureset='title2')\n",
     "\n",
     "from ltr.log import judgments_to_training_set\n",
     "trainingSet = judgments_to_training_set(client, \n",
@@ -705,6 +713,7 @@
     "                  trees=20,\n",
     "                  features=[1,3,4,5,7,8],\n",
     "                  featureSet='title2',\n",
+    "                  index='tmdb',\n",
     "                  modelName='title2')\n",
     "\n",
     "print()\n",
@@ -916,7 +925,7 @@
     "\n",
     "\n",
     "from ltr import setup\n",
-    "setup(client, config=config, featureset='title_doug')\n",
+    "setup(client, config=config, index='tmdb', featureset='title_doug')\n",
     "\n",
     "from ltr.log import judgments_to_training_set\n",
     "trainingSet = judgments_to_training_set(client, \n",
