--- a/netfix movies.ipynb
+++ b/netfix movies.ipynb
@@ -141,7 +141,7 @@
     "\n",
     "\n",
     "from ltr import setup\n",
-    "setup(client, config=config, featureset='title')"
+    "setup(client, config=config, index='tmdb', featureset='title')"
    ]
   },
   {
@@ -626,7 +626,7 @@
     "\n",
     "\n",
     "from ltr import setup\n",
-    "setup(client, config=config, featureset='title2')\n",
+    "setup(client, config=config, index='tmdb', featureset='title2')\n",
     "\n",
     "from ltr.log import judgments_to_training_set\n",
     "trainingSet = judgments_to_training_set(client, \n",
@@ -786,7 +786,7 @@
     "\n",
     "\n",
     "from ltr import setup\n",
-    "setup(client, config=config, featureset='title2')\n",
+    "setup(client, config=config, index='tmdb', featureset='title2')\n",
     "\n",
     "from ltr.log import judgments_to_training_set\n",
     "trainingSet = judgments_to_training_set(client, \n",
