--- a/raw-solr-commands.ipynb
+++ b/raw-solr-commands.ipynb
@@ -6,6 +6,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# If you haven't done LTR\n",
+    "from ltr.client.solr_client import SolrClient\n",
+    "client = SolrClient()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ltr.index import rebuild_tmdb\n",
+    "rebuild_tmdb(client)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import requests\n",
     "import json\n"
    ]
@@ -39,7 +60,7 @@
     "      \"name\" : \"title_bm25\",\n",
     "      \"store\": \"test\",\n",
     "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
-    "      \"params\" : {\n",
+    "      \"params\" : { #q=title:({$keywords})\n",
     "        \"q\" : \"title:(${keywords})\"\n",
     "      }\n",
     "    },\n",
@@ -49,6 +70,14 @@
     "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
     "      \"params\" : {\n",
     "        \"q\" : \"overview:(${keywords})\"\n",
+    "      }\n",
+    "    },\n",
+    "    {\n",
+    "      \"name\" : \"vote_average\",\n",
+    "      \"store\": \"test\",\n",
+    "      \"class\" : \"org.apache.solr.ltr.feature.SolrFeature\",\n",
+    "      \"params\" : {\n",
+    "        \"q\" : \"{!func}vote_average\"\n",
     "      }\n",
     "    }\n",
     "   \n",
@@ -74,9 +103,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# grade    docId       query\n",
+    "# 4        7555        rambo\n",
+    "# ...\n",
+    "# 0        1368        rambo\n",
+    "# 4        12414       rocky\n",
+    "\n",
     "params = {\n",
-    "    \"fl\": \"id,title,[features store=test efi.equivs=\\\"first blood\\\" efi.keywords=\\\"rambo\\\"]\",\n",
-    "    'q': \"id:7555 OR id:1370 id:1369 OR id:1368\",\n",
+    "    \"fl\": \"id,title,[features store=test efi.keywords=\\\"rambo\\\"]\",\n",
+    "    'q': \"id:7555 OR id:1370 id:1369 OR id:1368\", #rambo's graded documents\n",
     "    'rows': 10,\n",
     "    'wt': 'json'  \n",
     "}\n",
@@ -90,7 +125,7 @@
    "metadata": {},
    "source": [
     "```\n",
-    "4    qid:1   1:10.357876     2:11.95039    3:0.0   4:2019\n",
+    "4    qid:1   1:12.31     2:10.56    3:6.4\n",
     "4    qid:1   1:12.357876     2:11.95039    3:0.0\n",
     "4    qid:1   1:7.010513     2:11.95039    3:0.0\n",
     "3    qid:1   ...\n",
@@ -214,11 +249,28 @@
    "outputs": [],
    "source": [
     "params = {\n",
-    "    'q': 'rambo',\n",
+    "    'q': '{!ltr model=test efi.keywords=\\\"rambo\\\"}',\n",
     "    'rows': 10,\n",
-    "    \"rq\": \"{!ltr model=test reRankDocs=50 efi.keywords=\\\"rambo\\\"}\",\n",
     "    'wt': 'json',\n",
     "    'fl': 'title'\n",
+    "}\n",
+    "\n",
+    "resp = requests.post('http://localhost:8983/solr/tmdb/select', data=params).json()\n",
+    "resp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "params = {\n",
+    "    'q': 'rambo',\n",
+    "    'rows': 10,\n",
+    "    'wt': 'json',\n",
+    "    'fl': 'title',\n",
+    "    'rq': '{!ltr reRankDocs=50 model=test efi.keywords=\\\"rambo\\\"}'\n",
     "}\n",
     "\n",
     "resp = requests.post('http://localhost:8983/solr/tmdb/select', data=params).json()\n",
