--- a/tale-of-two-queries (ES).ipynb
+++ b/tale-of-two-queries (ES).ipynb
@@ -199,6 +199,7 @@
     "trainLog = train(client,\n",
     "                 trainingInFile='data/genre_by_date_judgments_train.txt',\n",
     "                 metric2t='NDCG@10',\n",
+    "                 index='tmdb',\n",
     "                 featureSet='genre',\n",
     "                 modelName='genre')\n",
     "\n",
@@ -265,6 +266,7 @@
     "trainLog = train(client,\n",
     "                 trainingInFile='data/genre_by_date_judgments_train.txt',\n",
     "                 metric2t='NDCG@10',\n",
+    "                 index='tmdb',\n",
     "                 featureSet='genre',\n",
     "                 modelName='genre')\n",
     "\n",
