--- a/tale-of-two-queries (Solr).ipynb
+++ b/tale-of-two-queries (Solr).ipynb
@@ -131,7 +131,7 @@
     "\n",
     "\n",
     "from ltr.setup import setup\n",
-    "setup(client, config=config, featureset='genre')"
+    "setup(client, config=config, index='tmdb', featureset='genre')"
    ]
   },
   {
@@ -176,6 +176,7 @@
     "                 trainingInFile='data/genre_by_date_judgments_train.txt',\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genre',\n",
+    "                 index='tmdb',\n",
     "                 modelName='genre')\n",
     "\n",
     "print()\n",
@@ -243,6 +244,7 @@
     "                 trainingInFile='data/genre_by_date_judgments_train.txt',\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genre',\n",
+    "                 index='tmdb',\n",
     "                 modelName='genre')\n",
     "\n",
     "print()\n",
