--- a/gonna need a bigger bot (ES).ipynb
+++ b/gonna need a bigger bot (ES).ipynb
@@ -114,7 +114,7 @@
     "\n",
     "\n",
     "from ltr import setup\n",
-    "setup(client, config=config, featureset='genome')"
+    "setup(client, config=config, index='tmdb', featureset='genome')"
    ]
   },
   {
@@ -163,6 +163,7 @@
     "                 trainingInFile='data/genome_judgments_train.txt',\n",
     "                 metric2t='NDCG@10',\n",
     "                 featureSet='genome',\n",
+    "                 index='tmdb',\n",
     "                 modelName='genome')"
    ]
   },
@@ -231,7 +232,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.1"
   }
  },
  "nbformat": 4,
