--- a/osc-blog.ipynb
+++ b/osc-blog.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from ltr import download\n",
+    "download();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import json\n",
     "\n",
     "articles = []\n",
@@ -15,7 +25,7 @@
     "        blog = json.loads(line)\n",
     "        articles.append(blog)\n",
     "\n",
-    "len(articles)"
+    "articles[-7]"
    ]
   },
   {
