Missing index param

--- a/tale-of-two-queries (ES).ipynb
+++ b/tale-of-two-queries (ES).ipynb
@@ -155,7 +155,7 @@
     "}\n",
     "\n",
     "from ltr.setup import setup\n",
-    "setup(client, config=config, featureset='genre')"
+    "setup(client, index='tmdb', config=config, featureset='genre')"
    ]
   },
   {
@@ -226,7 +226,7 @@
    "outputs": [],
    "source": [
     "from ltr.search import search\n",
-    "search(client, keywords=\"drama\", modelName=\"genre\")"
+    "search(client, keywords=\"science fiction\", modelName=\"genre\")"
    ]
   },
   {
