fix a few typos

--- a/netfix movies.ipynb
+++ b/netfix movies.ipynb
@@ -239,6 +239,7 @@
     "                  leafs=10,\n",
     "                  trees=10,\n",
     "                  features=[1,2,3,4,5,6,7],\n",
+    "                  index='tmdb',\n",
     "                  featureSet='title',\n",
     "                  modelName='title')\n",
     "\n",
@@ -451,7 +452,7 @@
    "source": [
     "### Doc in index... (notice nothing mentions 'star wars')\n",
     "\n",
-    "client.get_doc(doc_id=319074)"
+    "client.get_doc(index='tmdb', doc_id=319074)"
    ]
   },
   {
@@ -509,7 +510,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "client.get_doc(doc_id=1892)"
+    "client.get_doc(index='tmdb', doc_id=1892)"
    ]
   },
   {
@@ -648,7 +649,7 @@
     "                                               leafs=20,\n",
     "                                               trees=20,\n",
     "                                               kcv=15,\n",
-    "                                               features=[1,2,3,4,5,6],\n",
+    "                                               features=[1,2,3,4,5,6,7,8,9],\n",
     "                                               featureSet='title2')\n",
     "\n",
     "print()\n",
@@ -679,6 +680,7 @@
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
     "                  trees=20,\n",
+    "                  index='tmdb',\n",
     "                  features=[1,4,6,7,8],\n",
     "                  featureSet='title2',\n",
     "                  modelName='title2')\n",
@@ -848,6 +850,7 @@
     "                  metric2t='NDCG@10',\n",
     "                  leafs=20,\n",
     "                  trees=20,\n",
+    "                  index='tmdb',\n",
     "                  featureSet='title2',\n",
     "                  modelName='title2')\n",
     "\n",
