Print output for rambo

--- a/click models.ipynb
+++ b/click models.ipynb
@@ -101,6 +101,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pbm_judgments['rambo']"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
