--- a/netfix movies.ipynb
+++ b/netfix movies.ipynb
@@ -65,7 +65,7 @@
     "           },\n",
     "           \"featureset\": {\n",
     "            \"features\": [\n",
-    "            {\n",
+    "            { #1\n",
     "                \"name\": \"title_has_phrase\",\n",
     "                \"params\": [\"keywords\"],\n",
     "                \"template\": {\n",
@@ -77,7 +77,7 @@
     "                    }  \n",
     "                }\n",
     "            },\n",
-    "            {\n",
+    "            { #2\n",
     "                \"name\": \"title_has_terms\",\n",
     "                \"params\": [\"keywords\"],\n",
     "                \"template\": {\n",
@@ -89,28 +89,28 @@
     "                    }  \n",
     "                }\n",
     "            },\n",
-    "            {\n",
+    "            { #3\n",
     "                \"name\": \"title_bm25\",\n",
     "                \"params\": [\"keywords\"],\n",
     "                \"template\": {\n",
     "                    \"match\": {\"title\": \"{{keywords}}\"}\n",
     "                }\n",
     "            },\n",
-    "            {\n",
+    "            { #4\n",
     "                \"name\": \"overview_bm25\",\n",
     "                \"params\": [\"keywords\"],\n",
     "                \"template\": {\n",
     "                    \"match\": {\"overview\": \"{{keywords}}\"}\n",
     "                }\n",
     "            },\n",
-    "            {\n",
+    "            { #5\n",
     "                \"name\": \"overview_phrase_bm25\",\n",
     "                \"params\": [\"keywords\"],\n",
     "                \"template\": {\n",
     "                    \"match_phrase\": {\"overview\": \"{{keywords}}\"}\n",
     "                }\n",
     "            },\n",
-    "            {\n",
+    "            { #6\n",
     "                \"name\": \"title_fuzzy\",\n",
     "                \"params\": [\"keywords\"],\n",
     "                \"template\": {\n",
@@ -119,7 +119,7 @@
     "                                 \"fuzziness\": \"AUTO\"}}\n",
     "                }\n",
     "            },\n",
-    "             {\n",
+    "             { #7\n",
     "                \"name\": \"release_year\",\n",
     "                \"params\": [],\n",
     "                \"template\": {\n",
@@ -236,8 +236,8 @@
     "trainLog  = train(client,\n",
     "                  trainingInFile='data/title_judgments_train.txt',\n",
     "                  metric2t='NDCG@10',\n",
-    "                  leafs=10,\n",
-    "                  trees=10,\n",
+    "                  leafs=20,\n",
+    "                  trees=20,\n",
     "                  features=[1,2,3,4,5,6,7],\n",
     "                  index='tmdb',\n",
     "                  featureSet='title',\n",
@@ -452,7 +452,7 @@
    "source": [
     "### Doc in index... (notice nothing mentions 'star wars')\n",
     "\n",
-    "client.get_doc(index='tmdb', doc_id=319074)"
+    "client.get_doc(index='tmdb', doc_id=1368)"
    ]
   },
   {
@@ -471,7 +471,7 @@
    "outputs": [],
    "source": [
     "from ltr.helpers.movies import get_movie\n",
-    "get_movie(1892)"
+    "get_movie(1368)"
    ]
   },
   {
@@ -701,9 +701,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from ltr import search\n",
-    "search(client, \"cartoon with basketball aliens\", modelName='title')"
+    "search(client, \"cartoon with basketball aliens\", modelName='title2')"
    ]
   },
   {
