Add search to raw ES

--- a/raw-es-commands.ipynb
+++ b/raw-es-commands.ipynb
@@ -248,7 +248,8 @@
     "          \"model\": \"my_model\"\n",
     "      }\n",
     "  }\n",
-    "}"
+    "}\n",
+    "resp = requests.get('http://localhost:9200/tmdb/_search', json=search).json()"
    ]
   },
   {
