Add notes to OSC Blog

--- a/osc-blog.ipynb
+++ b/osc-blog.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Download corpus, judgments, etc"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -8,6 +15,13 @@
    "source": [
     "from ltr import download\n",
     "download();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Parse out OSC's blog into `articles`"
    ]
   },
   {
@@ -29,6 +43,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Instantiate an Elasticsearch client (as opposed to a `SolrClient`). Hello LTR can work with either "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -39,6 +60,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reindex from the corpus into the `blog` index. The JSON file at `docker/elasticsearch/<index_name>_settings.json` is loaded to configure the index."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -46,6 +74,13 @@
    "source": [
     "from ltr.index import rebuild\n",
     "rebuild(client, index='blog', doc_type='post', doc_src=articles)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A set of features that we've come up with that seems to work well for OSC's blog. Note here, these are Elasticsearch specific"
    ]
   },
   {
@@ -197,6 +232,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "With features loaded, transform the judgment list (`query,doc,label`) into a full training set with `query,doc,label,ftr1,ftr2,...` to prepare for training"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -208,6 +250,15 @@
     "                                        judgmentInFile='data/osc_judgments.txt', \n",
     "                                        trainingOutFile='data/osc_judgments_train.txt', \n",
     "                                        featureSet='test')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Train using RankyMcRankFace with the training set, optimizing search for a specific metric (here `NDCG@10`). Note `ltr.train` has additional capabilities for performing k-fold cross validaiton to ensure the model isn't overfit to training data.\n",
+    "\n",
+    "The model is stored in the search engine named `test` which can be referred to later for searching."
    ]
   },
   {
@@ -225,6 +276,13 @@
     "                 modelName='test')\n",
     "\n",
     "print(\"Train NDCG@10 %s\" % trainLog.rounds[-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Search! Pass some configuration in (`blog_fields`) for display purposes."
    ]
   },
   {
