--- a/raw-es-commands.ipynb
+++ b/raw-es-commands.ipynb
@@ -7,7 +7,20 @@
    "outputs": [],
    "source": [
     "import requests\n",
-    "import json\n"
+    "import json\n",
+    "\n",
+    "from ltr.client import ElasticClient\n",
+    "client = ElasticClient()\n",
+    "\n",
+    "host = client.get_host()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## LTR Plugin Initialization\n",
+    "The feature store can be removed by sending a DELETE request to `_ltr` endpoint."
    ]
   },
   {
@@ -16,7 +29,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "requests.delete(\"http://localhost:9200/_ltr/\")"
+    "url = 'http://{}:9200/_ltr/'.format(host)\n",
+    "print(url)\n",
+    "requests.delete(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To initialize the LTR plugin, issue a PUT request to the `_ltr` endpoint."
    ]
   },
   {
@@ -25,7 +47,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "requests.put(\"http://localhost:9200/_ltr/\")"
+    "url = 'http://{}:9200/_ltr/'.format(host)\n",
+    "print(url)\n",
+    "requests.put(url)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A feature set can be created by issuing a PUT to `_ltr/featureset/[feature_name]`"
    ]
   },
   {
@@ -69,8 +100,18 @@
     "   }\n",
     "}\n",
     "\n",
-    "requests.put('http://localhost:9200/_ltr/_featureset/my_feature_set', \n",
-    "             json=feature_set)"
+    "url = 'http://{}:9200/_ltr/_featureset/my_feature_set'.format(host)\n",
+    "print(url)\n",
+    "requests.put(url, json=feature_set)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Searching and Logging\n",
+    "\n",
+    "The following request demonstrates issuing a basic search and viewing the title."
    ]
   },
   {
@@ -86,8 +127,17 @@
     "    }}\n",
     "}\n",
     "\n",
-    "resp = requests.get('http://localhost:9200/tmdb/_search', json=search).json()\n",
+    "url = 'http://{}:9200/tmdb/_search'.format(host)\n",
+    "print(url)\n",
+    "resp = requests.get(url, json=search).json()\n",
     "print(resp['hits']['hits'][0]['_source']['title'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The next request demonstrates how to utilize the logging extension with a sltr query.  The sltr query specifies which feature set to utilize and specifies any parameters that the feature set may need."
    ]
   },
   {
@@ -129,8 +179,18 @@
     "  }\n",
     "}\n",
     "\n",
-    "resp = requests.get('http://localhost:9200/tmdb/_search', json=search_with_log).json()\n",
+    "url = 'http://{}:9200/tmdb/_search'.format(host)\n",
+    "print(url)\n",
+    "resp = requests.get(url, json=search_with_log).json()\n",
     "print(json.dumps(resp['hits']['hits'][0], indent=2))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Uploading a Model\n",
+    "Once features have been logged and training data has been generated, a model can be pushed into Elasticsearch.  The following shows what a request to PUT a new model looks like."
    ]
   },
   {
@@ -229,8 +289,17 @@
     "  }\n",
     "}\n",
     "\n",
-    "requests.post('http://localhost:9200/_ltr/_featureset/my_feature_set/_createmodel',\n",
-    "              json=create_model).json()"
+    "url = 'http://{}:9200/_ltr/_featureset/my_feature_set/_createmodel'.format(host)\n",
+    "print(url)\n",
+    "requests.post(url, json=create_model).json()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Searching with a Model\n",
+    "Now that a model has been uploaded to Elasticsearch we can use it to re-rank the results of a query."
    ]
   },
   {
@@ -249,7 +318,9 @@
     "      }\n",
     "  }\n",
     "}\n",
-    "resp = requests.get('http://localhost:9200/tmdb/_search', json=search).json()"
+    "\n",
+    "url = 'http://{}:9200/tmdb/_search'.format(host)\n",
+    "resp = requests.get(url, json=search).json()"
    ]
   },
   {
@@ -258,6 +329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(url)\n",
     "for hit in resp['hits']['hits']:\n",
     "    print(hit['_source']['title'])\n"
    ]
@@ -286,7 +358,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
